--- a/react-framework-master/package.json
+++ b/react-framework-master/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "react-dev": "webpack -d --watch",
-    "start": "nodemon server/index.js"
+    "start": "nodemon server/index.js",
+    "seed": "node schema.js"
   },
   "author": "Beth Johnson",
   "license": "ISC",
@@ -14,6 +15,9 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
     "webpack": "^2.2.1",
     "webpack-cli": "^3.2.3"
   },
