--- a/react-framework-master/package.json
+++ b/react-framework-master/package.json
@@ -11,6 +11,7 @@
   "author": "Beth Johnson",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.24.1",
