--- a/react-framework-master/package.json
+++ b/react-framework-master/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "react-dev": "webpack -d --watch",
     "start": "nodemon server/index.js",
-    "seed": "node schema.js"
+    "seed": "node schema.js",
+    "test": "jest --verbose --coverage"
   },
   "author": "Beth Johnson",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "eslint": "^5.13.0",
+    "jest": "^24.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
     "webpack": "^2.2.1",
