--- a/react-framework-master/package.json
+++ b/react-framework-master/package.json
@@ -28,6 +28,7 @@
     "Babel": "0.0.1",
     "babel-cli": "^6.26.0",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.15.0",
     "faker": "^4.1.0",
     "jquery": "^3.3.1",
