--- a/react-framework-master/package.json
+++ b/react-framework-master/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "react-dev": "webpack -d --watch",
-    "start": "nodemon server/index.js",
+    "start": "nodemon PostgreServer/index.js",
     "seed": "node schema.js",
+    "data-generate": "node PostgreServer/generator/index.js",
     "test": "jest --verbose --coverage"
   },
   "author": "Beth Johnson",
@@ -31,9 +32,13 @@
     "cors": "^2.8.5",
     "express": "^4.15.0",
     "faker": "^4.1.0",
+    "fs": "0.0.1-security",
     "jquery": "^3.3.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.9",
     "mysql": "^2.16.0",
+    "newrelic": "^5.6.0",
+    "pg": "^7.8.1",
     "react": "^15.6.2",
     "react-dom": "^15.6.2"
   }
