"Optimizing - bundle to production mode ALSO fix the endpoint for request for client and on method"

--- a/react-framework-master/package.json
+++ b/react-framework-master/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "react-dev": "webpack -d --watch",
+    "react-prod" : "webpack -p --watch" ,
     "start": "node PostgreServer/index.js",
     "seed": "node schema.js",
     "data-generate": "node PostgreServer/generator/index.js",
